--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,8 @@
-# Emacs/vim
 
-*~
-*.swp
+# Created by https://www.toptal.com/developers/gitignore/api/maven,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=maven,java
 
-# VSCode
-
-.vscode
-.classpath
-.project
-.settings/
-
-
-# MacOS
-
-.DS_Store
-
-# CS56 specific: Secrets files
-
-localhost.json
-heroku.json
-
-# Maven (from: https://github.com/github/gitignore/blob/master/Maven.gitignore)
-
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
-
-# Java (from: https://github.com/github/gitignore/blob/master/Java.gitignore)
-
+### Java ###
 # Compiled class file
 *.class
 
@@ -59,3 +26,25 @@ buildNumber.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+replay_pid*
+
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
+
+# Eclipse m2e generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# End of https://www.toptal.com/developers/gitigno
